chore: Fix before suite actions builder
- Make sure to propagate reference resolver injection to actions used in a before/after suite container
- Remove obsolete NoopTestAction
- Improve timer container to stop forked timer instances when test case is finished